Fix probleme style on mobile device

--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -6,9 +6,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
   background-size: cover;
   background-position: center;
+  padding: 16px;
 
   @include sm {
     height: 111px;
