--- a/src/pages/Apartments/index.scss
+++ b/src/pages/Apartments/index.scss
@@ -45,6 +45,9 @@
     color: $color-secondary;
     border-radius: $borderRaduis-md;
     padding: 4px 40px;
+    @include sm {
+      border-radius: 5px;
+    }
   }
 
   &__profil {
@@ -53,6 +56,7 @@
     @include sm {
       flex-direction: row-reverse;
       justify-content: space-between;
+      align-items: center;
     }
   }
   &__user {
